# qbot-dev

./: .gitignore  AGENTS.md  Makefile  README.md
dev-env/docker/: run.sh
docker/: .dockerignore  Dockerfile  run.sh
src/cpp_talker/: CMakeLists.txt  package.xml
src/cpp_talker/src/: talker.cpp
src/qbot_app/: CMakeLists.txt  package.xml
src/qbot_app/src/: qbot_app_node.cpp
src/qbot_simulation/: CMakeLists.txt  package.xml
src/qbot_simulation/src/: depth_generator_node.cpp  depth_processor_node.cpp
src/qbot_utils/: CMakeLists.txt  package.xml
src/qbot_utils/include/qbot_utils/: qbot_utils.hpp
src/qbot_utils/src/: qbot_utils.cpp
