<?xml version="1.0"?>
<?model-generator version="1.0"?>
<package format="3">
  <name>qbot_app</name>
  <version>0.0.0</version>
  <description>QBot Application Package</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>qbot_utils</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
