<package format="3">
  <name>qbot_utils</name>
  <version>0.0.0</version>
  <description>Utility library for qbot</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
